damn old java not having getFirst